--- a/booking/package.json
+++ b/booking/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
+    "formik": "^2.4.6",
+    "lucide-react": "^0.511.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "react-router": "^7.6.0",
+    "tailwindcss": "^4.1.7",
+    "zod": "^3.25.20"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
