--- a/booking/bookingcon/package.json
+++ b/booking/bookingcon/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.1",
     "tailwindcss": "^4.1.8",
